--- a/docs/基础/基础知识/时间复杂度.md
+++ b/docs/基础/基础知识/时间复杂度.md
@@ -104,3 +104,21 @@ $T(n) = 2T(\frac{n}{4}) + \sqrt{n}$
 * 此时 $\log_4 2 = 0.5 = c$，时间复杂度 $\Theta(\sqrt{n}\ \log{n})$
 
 <img src="https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410090930835.png" alt="image-20241009093013717" style="zoom:67%;" />
+
+## 常见估计
+
+### i和j=i+1
+
+```java
+for (int i = 0; i < length - 1; i++) {
+    for (int j = i + 1; j < length; j++) {
+        if (a[i] > a[j])
+            count++;
+    }
+}
+```
+
+就是组合，n-1个、n-2个……1个
+
+那么就是 $\dfrac{(n-1+1)(n-1)}{2} = \dfrac{n(n-1)}{2}$，O(n)=n^2
+
