--- a/docs/基础/排序/01_冒泡.md
+++ b/docs/基础/排序/01_冒泡.md
@@ -24,35 +24,19 @@ public int[] sortArray(int[] nums) {
 则j的范围是[0...n-2], ..., [0]。
 而j<i, 那么i的范围[n-1...1] 自减。
 ```
-```java
-// 递归
-public int[] sortArray(int[] nums) {
-    sort(nums, nums.length - 1);
-    return nums;
-}
-
-public void sort(int[] nums, int i) {
-    if (i < 1) {
-        return;
-    }
-    for (int j = 0; j < i; j++) {
-        if (nums[j] > nums[j + 1]) {
-            swap(nums, j, j + 1);
-        }
-    }
-    sort(nums, i - 1);
-}
-```
 ## 🚀改进版：记录待排序数组边界
 
-- 用`x`记录最后一次交换的位置 `j`，每轮结束`[0...x]`是待排序部分, `[x+1, n-1]`是已排序（最后一次交换后，只是x+1一定是大的，x还可能比之前的小）
-- 让下一轮的 `i = x` （`[0...i]`是待排序部分）
+用`x`记录最后一次交换的位置 `j`（`j+1`是已排序好，`j`还是未排序好的区域），那么下一轮会比较 `j-1` 和 `j`
+
+- 要么是`j < i`,  `i = x` 
+- 要么是`j <= i`，`i = x - 1`
 
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406201437851.png)
 ```java
 public int[] sortArray(int[] nums) {
-    for(int i = nums.length - 1; i > 0;){		// 不写 i--
-        int x = 0;		// 控制的是每轮的边界 i
+    int n = nums.length;
+    for(int i = n - 1; i > 0;){				// 不写 i--
+        int x = 0;							// 控制的是每轮的右边界 i
         for(int j = 0; j < i; j++){
             if(nums[j] > nums[j+1]){
                 swap(nums, j , j+1);
@@ -63,29 +47,26 @@ public int[] sortArray(int[] nums) {
     }
     return nums;
 }
-```
-```java
+
+
 public int[] sortArray(int[] nums) {
-    sort(nums, nums.length - 1);
+    int n = nums.length;
+    for (int i = n - 2; i >= 0;) {
+        int x = 0;
+        for (int j = 0; j <= i; j++) {
+            if (nums[j] > nums[j + 1]) {
+                swap(nums, j, j + 1);
+                x = j;
+            }
+        }
+        i = x - 1;
+    }
     return nums;
 }
-
-public void sort(int[] nums, int i) {
-    if (i < 1) {
-        return;
-    }
-    int x = 0;
-    for (int j = 0; j < i; j++) {
-        if (nums[j] > nums[j + 1]) {
-            swap(nums, j, j + 1);
-            x = j;
-        }
-    }
-    sort(nums, x);
-}
 ```
-
 ## 时间复杂度
+
+优化和不优化，平均都是O(n^2)，只是最好可以是O(n)
 
 ## 算法特性
 
