--- a/docs/基础/排序/04_快速.md
+++ b/docs/基础/排序/04_快速.md
@@ -1,4 +1,4 @@
-## 双指针：最能记住的
+## 🚀双指针：最能记住的
 
 ![image-20240921093636233](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409210936314.png)
 
@@ -13,41 +13,34 @@
 // 912. 排序数组
 class Solution {
     public int[] sortArray(int[] nums) {
-        int n = nums.length;
-        quickSort(nums, 0, n - 1);
+        quickSort(nums, 0, nums.length - 1);
         return nums;
     }
 
-    // [i...j]
-    public void quickSort(int[] nums, int i, int j) {
-        // 只有一个就无须排序
-        if (i >= j) {
-            return;
-        }
-        int p = partition(nums, i, j);
-        quickSort(nums, i, p - 1);
-        quickSort(nums, p + 1, j);
-    }
+    public void quickSort(int[] nums, int l, int r) {
+        if (l < r) {
+            int i = l, j = r;			// i和j表示空缺位，开始nums[i]是空缺位
+            int base = nums[i];			// 第一个选择为哨兵。
+            while (i < j) {
+                while (i < j && nums[j] >= base) {	   	// j：找到右边不该存在的[小于]元素
+                    j--;
+                }
+                if (i < j) {		
+                    nums[i] = nums[j];					// 拿j填补空缺 i
+                }
 
-    public int partition(int[] nums, int i, int j) {
-        // 第一个选择为哨兵。
-        int base = nums[i];
-        // i < j 起码有两个元素
-        while (i < j) {
-            // i和j表示空缺位，开始nums[i]是空缺位
-            // 哨兵右边都是大于等于，左边都是小于等于。
-            while (i < j && nums[j] >= base){		// 找到右边不该存在的小元素
-                j--;
-        	}
-        	nums[i] = nums[j];						// 填补空缺 i
-            
-            while (i < j && nums[i] <= base){		// 找到左边不该存在的大元素
-                i++;
+                while (i < j && nums[i] <= base) {		// i：找到左边不该存在的[大于]元素
+                    i++;
+                }
+                if (i < j) {
+                    nums[j] = nums[i];					// 拿i填补空缺j
+                }
             }
-            nums[j] = nums[i];						// 填补空缺j
+            nums[i] = base;			// 最后i==j, 填补最初的哨兵值
+            // 哨兵位置固定，不参与排序
+            quickSort(nums, l, i - 1);
+            quickSort(nums, i + 1, r);
         }
-        nums[i] = base;								// 最后i==j, 填补最初的哨兵值
-        return i;
     }
 }
 ```
@@ -79,6 +72,18 @@ class Solution {
 - **空间复杂度为 $O(n)$、原地排序**：在最差情况下，达到最差递归深度 $n$ ，使用 $O(n)$ 栈帧空间。排序操作是在原数组上进行的，未借助额外数组。
 
 - **非稳定排序**：在哨兵划分的最后一步，基准数可能会被交换至相等元素的右侧。
+
+​	441
+
+```
+441
+4是哨兵
+[]41		找到1
+14[]		找不到大于的，i==j
+144			填充哨兵，这样4的顺序就倍调换了
+```
+
+
 
 ## 其他
 
