--- a/docs/基础/排序/05_归并.md
+++ b/docs/基础/排序/05_归并.md
@@ -22,7 +22,7 @@ class Solution {
     }
 
     public void mergeSort(int[] nums, int i, int j) {
-        if (i == j) {   // 当子数组长度为 1 时终止递归
+        if (i >= j) {   // i==j就行，当子数组长度为 1 时终止递归。但有的傻逼题，传空数组，j = -1，那么就 i>=j
             return;
         }
         int m = i + j >>> 1;
@@ -32,23 +32,22 @@ class Solution {
         merge(nums, i, m, j);
     }
 
-    public void merge(int[] nums, int l, int m, int r) {
-        int[] t = new int[r - l + 1];
-        int p1 = l, p2 = m+1;
-        int k = 0;
-        while (p1 <= m && p2 <= r) {
-            if (nums[p1] < nums[p2]) {
-                t[k++] = nums[p1++];
+    public void merge(int[] nums, int i, int m, int j) {
+        int[] temps = new int[j - i + 1];
+        int p1 = i, p2 = m + 1, p = 0;
+        while (p1 <= m && p2 <= j) {
+            if (nums[p1] <= nums[p2]) {
+                temps[p++] = nums[p1++];
             } else {
-                t[k++] = nums[p2++];
+                temps[p++] = nums[p2++];
             }
         }
         if (p1 <= m) {
-            System.arraycopy(nums, p1, t, k, m - p1 + 1);
+            System.arraycopy(nums, p1, temps, p, m - p1 + 1);
         } else {
-            System.arraycopy(nums, p2, t, k, r - p2 + 1);
+            System.arraycopy(nums, p2, temps, p, j - p2 + 1);
         }
-        System.arraycopy(t, 0, nums, l, r - l + 1);
+        System.arraycopy(temps, 0, nums, i, j - i + 1);
     }
 }
 ```
@@ -235,10 +234,3 @@ class Solution {
 
 **稳定排序**：在合并过程中，相等元素的次序保持不变。
 
-## 题
-
-[计算数组的小和.md](..\..\题\笔试\计算数组的小和.md)  当p1的数<=p2的时，p2及其后有几个 `res += (r - p2 + 1) * nums[p1]`
-
- [LCR 170. 交易逆序对的总数.md](..\..\题\leetcode\LCR 170. 交易逆序对的总数.md)  
-
-[493. 翻转对.md](..\..\题\leetcode\493. 翻转对.md) 
