--- a/docs/基础/排序/排序.md
+++ b/docs/基础/排序/排序.md
@@ -1,18 +1,3 @@
-```java
-public void swap(int[] nums, int i, int j) {
-    if(i == j) return;
-    nums[i] = nums[i] ^ nums[j];
-    nums[j] = nums[i] ^ nums[j];
-    nums[i] = nums[i] ^ nums[j];
-}
-
-private void swap(int[] nums, int i, int j){
-    int temp = nums[i];
-    nums[i] = nums[j];
-    nums[j] = temp;
-}
-```
-
 ## 排序速记
 
 冒泡：j和j+1比较，把最大的移到未排序的末尾。
@@ -27,7 +12,7 @@ private void swap(int[] nums, int i, int j){
 
 ​	（1）两个for循环，内循环是从未排序中找。
 
-​	（2）未排序部分为 [i, n-1]，i属于 [0, n-2]。在未排序部分中找到元素最小的索引 k
+​	（2）未排序部分为 [i, n-1]，且默认i是初始最小，则i属于 [0, n-2]。在未排序部分中找到元素最小的索引 k
 
 ​	（3）如果不原地 k=i，那么交换未排序的首位
 
@@ -87,15 +72,14 @@ private void swap(int[] nums, int i, int j){
 
 | 算法 |    最好    |    最坏    |    平均    |  空间   | 稳定  | 思想 |          注意事项          |      速度      |         优化          |
 | :--: | :--------: | :--------: | :--------: | :-----: | :---: | :--: | :------------------------: | :------------: | :-------------------: |
-| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | **Y** |      |  最好需要优化 + 已经有序   |      超时      | x记录最后一次交换位置 |
-| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  原地   |   N   |      |    交换次数一般少于冒泡    |      超时      |                       |
-| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | **Y** |      |       最好是已经有序       |      巨慢      |   优化就是希尔排序    |
-| 希尔 |  O(nlogn)  |  O($n^2$)  | O($nlogn$) |  原地   |   N   |      |                            |  比堆排序还快  |                       |
-| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   | **Y** |      |       额外的O(n)空间       | 比希尔排序还快 |                       |
-| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |   N   |      | 枢轴值随机化来缓解最坏情况 |      巨慢      |                       |
-|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  原地   |   N   |      |                            |       快       |      非递归下潜       |
+| 冒泡 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | √ |      |  最好需要优化 + 已经有序   |      x      | x记录最后一次交换位置 |
+| 选择 |  O($n^2$)  |  O($n^2$)  |  O($n^2$)  |  原地   |      |      |    交换次数一般少于冒泡    |      x      |                       |
+| 插入 |    O(n)    |  O($n^2$)  |  O($n^2$)  |  原地   | √ |      |       最好是已经有序       |      巨慢      |   优化就是希尔排序    |
+| 归并 | O($nlogn$) | O($nlogn$) | O($nlogn$) |  O(n)   | √ |      |       额外的O(n)空间       | 快 |                       |
+| 快速 | O($nlogn$) |  O($n^2$)  | O($nlogn$) | O(logn) |      |      | 枢轴值随机化来缓解最坏情况 |      巨慢      |                       |
+|  堆  | O($nlogn$) | O($nlogn$) | O($nlogn$) |  原地   |      |      |                            |       快       |      非递归下潜       |
 
-
+归并和堆，都是 O($nlog n$)
 
 
 ## 图
@@ -112,11 +96,15 @@ private void swap(int[] nums, int i, int j){
 
 稳定
 
-​	冒泡排序、插入排序；归并排序；桶计数基数排序
+​	**冒泡排序、插入排序；归并排序**
 
 不稳定
 
-​	选择排序（221）、希尔排序；快速排序（）、堆排序（左右乱）
+​	选择排序（441）
+
+​	快速排序（441）
+
+​	堆排序（左右乱）
 
 ## 时间复杂度
 
