--- a/docs/基础/排序/计算题.md
+++ b/docs/基础/排序/计算题.md
@@ -1,5 +1,17 @@
 ## 猜出排序
 
+### 指定结果
+
+> 有字符序列（Q，H，C，Y，P，A，M，S，R，D，F，X），新序列（F，H，C，D，A，M，P，S，R，Y，Q，X）是下列哪个排序算法。
+>
+> 快速排序。确实只有一个M在应该存在的位置；
+
+快速排序，哨兵。
+
+冒泡排序，看末尾，而且每趟只动一个。
+
+### 指定排序
+
 快速排序的哨兵，有些是首位，有些是随机。
 
 > 排序算法中，将所有元素进行一遍处理的过程称为“趟”。下列序列中，不可能是快速排序第二趟排序结果的是D
@@ -19,10 +31,6 @@
 ![image-20240622232637827](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202406222326894.png)
 
 
-
-> 有字符序列（Q，H，C，Y，P，A，M，S，R，D，F，X），新序列（F，H，C，D，A，M，P，S，R，Y，Q，X）是下列哪个排序算法
-
-快速排序，确实只有一个M在应该存在的位置；
 
 ## 堆排序
 
