--- a/docs/基础/数学/取模.md
+++ b/docs/基础/数学/取模.md
@@ -1,8 +1,32 @@
-## 正负数
+## 规则
 
-绝对值相同，符号保持不变。
+取余，其实是除法的余数。3%2=1 就是 3- ⌊3/2⌋*2 = 1
+
+- 被模数的正负数就是符号变化，模数的正负号结果一样：
+
+  `4%3=1,-4%3=-1`
+
+​		4%3=1 就是 4 - ⌊4/3⌋*3 = 1
+
+​		-4%3=-1 就是 -4 - ⌊-4/3⌋*3 = -1
+
+​	`4%-3=1,-4%-3=-1`
+
+​	4%-3=1 就是 4 - ⌊4/-3⌋*(-3) = 1，负号被抵消了，所以同 % 3
+
+​	-4%-3=-1 就是 -4 - ⌊-4/-3⌋*(-3) = -1，负号被抵消了，所以同 % 3
+
+- 3%1 = 0，因为 3 / 1 = 3 除得尽。
+- 3%0错误，因为3/0是除0错误。
+
+- 大小
+
+  4 % 6 = 4：如果a<b，则a%b=a
+
+  6 % 4 = 2.
 
 ```java
+// % 3
 for(int i = 0;  i < 10; i++){
     System.out.printf("%d%%3=%d,%d%%3=%d\n", i, i%3, -i, (-i)%3);
 }
@@ -16,38 +40,88 @@ for(int i = 0;  i < 10; i++){
 // 7%3=1,-7%3=-1
 // 8%3=2,-8%3=-2
 // 9%3=0,-9%3=0
+
+
+// % -3
+for(int i = 0;  i < 10; i++){
+    System.out.printf("%d%%-3=%d,%d%%-3=%d\n", i, i%-3, -i, (-i)%-3);
+}
+0%-3=0,0%-3=0
+1%-3=1,-1%-3=-1
+2%-3=2,-2%-3=-2
+3%-3=0,-3%-3=0
+4%-3=1,-4%-3=-1
+5%-3=2,-5%-3=-2
+6%-3=0,-6%-3=0
+7%-3=1,-7%-3=-1
+8%-3=2,-8%-3=-2
+9%-3=0,-9%-3=0
 ```
 
-## 大小
+## 最大公约数和最小公倍数
 
-4 % 6 = 4：如果a<b，则a%b=a
+辗转相除法：gcd(a,b) = gcd(b,a mod b)
 
-6 % 4 = 2.
+![image-20241108104110183](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202411081041236.png)
 
-## 取位
+$\text{lcm(a,b)} = \dfrac{a*b}{\text{gcd(a,b)}}$
 
-123 → 3、2、1
+```java
+import java.util.Scanner;
 
-👉321
+public class Main {
+    public static void main(String[] args) {
+        Scanner in = new Scanner(System.in);
+        long a = in.nextLong();
+        long b = in.nextLong();
+
+        long g = gcd(a, b);
+        long s = a / g * b;		//  这样比起 a * b /g 就不会溢出
+        System.out.println(g + " " + s);
+    }
+
+    public static long gcd(long a, long b) {
+        return b == 0 ? a : gcd(b, a % b);
+    }
+}
+```
+
+
+
+## 取位/进制
+
+### 123 → 3、2、1→321
 
 ```java
 int res = 0;
-int count = 0;
 while(n != 0){
 	res = res * 10 + n % 10;
     n /= 10;
 }
 ```
 
-👉123
+### 123 → 3、2、1→123
 
 ```java
 int res = 0;
-int count = 0;
+int mul = 1;
 while(n != 0){
-    res = n % 10 * (int)(Math.pow(10, count)) + res;
-    count++;
+    res = n % 10 * mul + res;
+    mul *= 10;
     n /= 10;
 }
 ```
 
+## 进制
+
+十进制转n进制：倒着的余数 
+
+[504. 七进制数.md](..\..\题\leetcode\504. 七进制数.md)  [0, base)
+
+[168. Excel 表列名称.md](..\..\题\leetcode\168. Excel 表列名称.md) : [1, base]
+
+
+
+n进制转十进制
+
+[171. Excel 表列序号.md](..\..\题\leetcode\171. Excel 表列序号.md) 
