--- a/docs/基础/树/遍历/层序遍历.md
+++ b/docs/基础/树/遍历/层序遍历.md
@@ -1,5 +1,7 @@
 https://leetcode.cn/problems/binary-tree-level-order-traversal/solutions/244853/bfs-de-shi-yong-chang-jing-zong-jie-ceng-xu-bian-l/
 
+队列，先进先出。
+
 
 ## 不分层结果
 出队时打印。
