--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -1,3 +1,7 @@
+[toc]
+
+
+
 ## 模板
 
 ### cur节点后面增删节点
@@ -219,9 +223,15 @@ class Solution {
 
 ​	[19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) ：快慢指针，删除要sentinel，找倒 n+1
 
-​	[83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md)  ：（1）cur cur.next （2）pre cur
+​	
 
-​	[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) ：pre cur cur.next
+​	[83. 删除排序链表中的重复元素.md](..\..\题\leetcode\83. 删除排序链表中的重复元素.md)（1221→121，留一个）：cur cur.next 
+
+​	[82. 删除排序链表中的重复元素 II.md](..\..\题\leetcode\82. 删除排序链表中的重复元素 II.md) （1224→14，不留，但保证输入升序）：cur cur.next  cur.next.next 
+
+​	真题（1221→空，不留，且可能回去再删）：
+
+​	 [删除链表重复节点.md](..\..\题\笔试\Untitled Folder\删除链表重复节点.md)（1221→[]，不留，bu保证输入升序） ：
 
 ​	237 [203. 移除链表元素.md](..\..\题\leetcode\203. 移除链表元素.md) 
 
