--- a/docs/题/leetcode/493. 翻转对.md
+++ b/docs/题/leetcode/493. 翻转对.md
@@ -1,59 +1,119 @@
-归并
+> 给定一个数组 `nums` ，如果 `i < j` 且 `nums[i] > 2*nums[j]` 我们就将 `(i, j)` 称作一个***重要翻转对\***。
 
-（1）正在merge先统计**翻转对**：`i < j` 且 `nums[i] > 2*nums[j]` 
+## 归并
 
-​	p2左边的都小，都满足翻转对关系，`p2 - (m + 1)` 是 [m, p2)的个数。
+merge时
 
-![image-20241009232410166](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202410092324210.png)
+（1）先统计**翻转对**：`i < j` 且 `nums[i] > 2*nums[j]` 
 
-（2）完后正常merge
+（2）再正常merge
+
+![image-20241122162113365](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202411221621432.png)
+
+> 左
+
+对于每个 *i* 而言，只要j满足 `nums[i] > 2*nums[j]`，那些比`nums[i]`大的子数组中的数，就一定和`nums[j]`组成翻转对，m - i + 1
+
+> 右
+
+对于每个 *i* 而言，我们不断地向右移动 *j*，直到 *nums*[*i*] ≤ 2⋅*nums*[*j*]，j的子数组左边的数一定满足翻转对。意味着以 *i* 为左端点的翻转对数量为 *j*-(*m*+1)
+
+### 统计左边的
 
 ```java
 class Solution {
+    int count;
+
     public int reversePairs(int[] nums) {
-        return mergeSort(nums, 0, nums.length - 1);
+        mergeSort(nums, 0, nums.length - 1);
+        return count;
     }
 
-    public int mergeSort(int[] nums, int i, int j) {
+    public void mergeSort(int[] nums, int i, int j) {
         if (i >= j) {
-            return 0;
+            return;
         }
         int m = i + j >>> 1;
-        return mergeSort(nums, i, m) + mergeSort(nums, m + 1, j) + merge(nums, i, m, j);
+        mergeSort(nums, i, m);
+        mergeSort(nums, m + 1, j);
+        merge(nums, i, m, j);
     }
 
-    public int merge(int[] nums, int l, int m, int r) {
-        // 加了个额外的统计
-        int res = 0;
-        int p1 = l, p2 = m + 1;
-        while (p1 <= m) {
-            while (p2 <= r && (long) nums[p1] > 2 * (long) nums[p2]) {
-                p2++;
+    public void merge(int[] nums, int i, int m, int j) {
+        int k2 = m + 1;
+        for (int k1 = i; k1 <= m; k1++) {
+            while (k2 <= j && (long) nums[k1] > (long) 2 * nums[k2]) {
+                count += m - k1 + 1;
+                k2++;
             }
-            res += p2 - (m + 1) ;		// 只计算p2左边的个数，不算自己
-            p1++;
         }
 
-        // 正常merge，无修改
-        int[] t = new int[r - l + 1];
-        p1 = l;
-        p2 = m + 1;
-        int k = 0;
-        while (p1 <= m && p2 <= r) {
-            if (nums[p1] < nums[p2]) {
-                t[k++] = nums[p1++];
+        int[] temps = new int[j - i + 1];
+        int p1 = i, p2 = m + 1, p = 0;
+        while (p1 <= m && p2 <= j) {
+            if (nums[p1] <= nums[p2]) {
+                temps[p++] = nums[p1++];
             } else {
-                t[k++] = nums[p2++];
+                temps[p++] = nums[p2++];
             }
         }
         if (p1 <= m) {
-            System.arraycopy(nums, p1, t, k, m - p1 + 1);
+            System.arraycopy(nums, p1, temps, p, m - p1 + 1);
         } else {
-            System.arraycopy(nums, p2, t, k, r - p2 + 1);
+            System.arraycopy(nums, p2, temps, p, j - p2 + 1);
         }
-        System.arraycopy(t, 0, nums, l, r - l + 1);
-        return res;
+        System.arraycopy(temps, 0, nums, i, j - i + 1);
     }
 }
 ```
 
+### 统计右边的
+
+```java
+class Solution {
+    int count;
+
+    public int reversePairs(int[] nums) {
+        mergeSort(nums, 0, nums.length - 1);
+        return count;
+    }
+
+    public void mergeSort(int[] nums, int i, int j) {
+        if (i >= j) {
+            return;
+        }
+        int m = i + j >>> 1;
+        mergeSort(nums, i, m);
+        mergeSort(nums, m + 1, j);
+        merge(nums, i, m, j);
+    }
+
+    public void merge(int[] nums, int i, int m, int j) {
+        // 加了个额外的统计
+        int k2 = m + 1;
+        for (int k1 = i; k1 <= m; k1++) {
+            while (k2 <= j && (long) nums[k1] > (long) 2 * nums[k2]) {
+                k2++;
+            }
+            count += k2 - (m + 1);		// [m+1, k2)
+        }
+
+        // 正常merge，无修改
+        int[] temps = new int[j - i + 1];
+        int p1 = i, p2 = m + 1, p = 0;
+        while (p1 <= m && p2 <= j) {
+            if (nums[p1] <= nums[p2]) {
+                temps[p++] = nums[p1++];
+            } else {
+                temps[p++] = nums[p2++];
+            }
+        }
+        if (p1 <= m) {
+            System.arraycopy(nums, p1, temps, p, m - p1 + 1);
+        } else {
+            System.arraycopy(nums, p2, temps, p, j - p2 + 1);
+        }
+        System.arraycopy(temps, 0, nums, i, j - i + 1);
+    }
+}
+```
