--- a/docs/题/leetcode/543. 二叉树的直径.md
+++ b/docs/题/leetcode/543. 二叉树的直径.md
@@ -3,11 +3,12 @@
 > 二叉树的 **直径** 是指树中任意两个节点之间最长路径的 长度 。这条路径可能经过也可能不经过根节点 root 。
 
 
-直径 = 左节点个数 + 右节点个数:
 
-    假设我们知道对于该节点的左儿子向下遍历经过最多的节点数 L （即以左儿子为根的子树的深度） 和其右儿子向下遍历经过最多的节点数 R （即以右儿子为根的子树的深度），那么以该节点为起点的路径经过节点数的最大值即为 L+R+1 。
+**直径 = 左节点个数 + 右节点个数**
 
-    我们记节点 node 为起点的路径经过节点数的最大值为 d_node，那么二叉树的直径就是所有节点 d_node 的最大值减一，即 L+R+1-1 = L+R
+​	假设我们知道对于该节点的左儿子向下遍历经过最多的节点数 L （即以左儿子为根的子树的深度） 和其右儿子向下遍历经过最多的节点数 R （即以右儿子为根的子树的深度），那么以该节点为起点的路径经过节点数的最大值即为 L+R+1 。
+
+​	我们记节点 node 为起点的路径经过节点数的最大值为 d_node，那么二叉树的直径就是所有节点 d_node 的最大值减一，即 L+R+1-1 = L+R
 
 ```java
 class Solution {
