--- a/docs/题/leetcode/82. 删除排序链表中的重复元素 II.md
+++ b/docs/题/leetcode/82. 删除排序链表中的重复元素 II.md
@@ -1,3 +1,29 @@
+## cur、cur.next、cur.next.next
+
+cur从dummy开始，比较 next 和 nnext的值。
+
+```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        ListNode dummy = new ListNode(0, head);
+        ListNode cur = dummy;
+        while (cur.next != null && cur.next.next != null) {
+            int val = cur.next.val;
+            if (cur.next.next.val == val) {
+                while (cur.next != null && cur.next.val == val) {
+                    cur.next = cur.next.next;
+                }
+            } else {
+                cur = cur.next;
+            }
+        }
+        return dummy.next;
+    }
+}
+```
+
+
+
 ## pre、cur、cur.next
 
 ![image-20240929232105088](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409292321141.png)
@@ -38,6 +64,26 @@ class Solution {
 ## 递归
 
 ```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        ListNode dummy = new ListNode(-101,head);
+        return dfs(dummy).next;
+    }
+    public ListNode dfs(ListNode root){
+        if(root == null) 
+            return root;
+        ListNode next = root.next;
+        if(next == null || next.val != root.val){
+            root.next = dfs(root.next);
+            return root;
+        }
+        while(next != null && next.val == root.val){
+            next = next.next;
+        }
+        return dfs(next);
+    }
+}
+
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
         if(head == null || head.next == null){
