--- a/docs/题/leetcode/83. 删除排序链表中的重复元素.md
+++ b/docs/题/leetcode/83. 删除排序链表中的重复元素.md
@@ -86,7 +86,27 @@ class Solution {
 ```
 ## 递归
 
+返回从当前head结点开始的，完成重复的链表
+- head与head.next重复，则返回下一次递归。
+- 不重复，则head指向下次递归，并返回head。
 ```java
+class Solution {
+    public ListNode deleteDuplicates(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        	
+        ListNode next = deleteDuplicates(head.next);
+        if(head.val == head.next.val){
+            return next;
+        }else{
+            head.next = next;
+            return head;
+        }
+    }
+}
+
 class Solution {
     public ListNode deleteDuplicates(ListNode head) {
         ListNode sentinel = new ListNode(-1011, head);
@@ -105,26 +125,6 @@ class Solution {
             return head;
         }else{
             head.next = last;
-            return head;
-        }
-    }
-}
-```
-
-返回从当前head结点开始的，完成重复的链表
-- head与head.next重复，则返回下一次递归。
-- 不重复，则head指向下次递归，并返回head。
-```java
-class Solution {
-    public ListNode deleteDuplicates(ListNode head) {
-        if(head == null || head.next == null){
-            return head;
-        }
-
-        if(head.val == head.next.val){
-            return deleteDuplicates(head.next);
-        }else{
-            head.next = deleteDuplicates(head.next);
             return head;
         }
     }
