--- a/docs/题/笔试/计算数组的小和.md
+++ b/docs/题/笔试/计算数组的小和.md
@@ -71,7 +71,7 @@ public class Main {
             int k = 0;
             long res = 0;
             while (p1 <= m && p2 <= r) {
-                if (nums[p1] <= nums[p2]) {		// < 还是 <=，看小和的定义
+                if (nums[p1] <= nums[p2]) {
                     res += (r - p2 + 1) * nums[p1];
                     t[k++] = nums[p1++];
                 } else {
