--- a/docs/题/leetcode/124. 二叉树中的最大路径和.md
+++ b/docs/题/leetcode/124. 二叉树中的最大路径和.md
@@ -3,9 +3,9 @@
 
 **路径和** 是路径中各节点值的总和。
 
-二叉树中的 **路径** 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。
+​	二叉树中的 **路径** 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。
 
-该路径 至少包含一个 节点，且不一定经过根节点。
+​	该路径 至少包含一个 节点，且不一定经过根节点。
 
 ```java
 class Solution {
