--- a/docs/题/leetcode/LCR 170. 交易逆序对的总数.md
+++ b/docs/题/leetcode/LCR 170. 交易逆序对的总数.md
@@ -1,39 +1,47 @@
+[LCR 170. 交易逆序对的总数 - 力扣（LeetCode）题解](https://leetcode.cn/problems/shu-zu-zhong-de-ni-xu-dui-lcof/solutions/622496/jian-zhi-offer-51-shu-zu-zhong-de-ni-xu-pvn2h/)
 
+当满足 `nums[i] > nums[j]`时，左子数组中的 i 右边的数一定大于`nums[j]`，就是逆序对的个数`count += m - p1 + 1;`
+
+- 当右子为空时，那么只有一个元素就不构成逆序对，所以不统计。
+
+![image-20241122150146144](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202411221501215.png)
 
 ```java
 class Solution {
+    int count = 0;
+
     public int reversePairs(int[] record) {
-        return mergeSort(record, 0, record.length - 1);
+        mergeSort(record, 0, record.length - 1);
+        return count;
     }
 
-    public int mergeSort(int[] nums, int i, int j) {
-        if (i >= j) {
-            return 0;
-        }
-        int m = i + j >> 1;
-        return mergeSort(nums, i, m) + mergeSort(nums, m + 1, j) + merge(nums, i, m, j);
+    public void mergeSort(int[] nums, int i, int j) {
+        if (i >= j)
+            return;
+
+        int m = i + j >>> 1;
+        mergeSort(nums, i, m);
+        mergeSort(nums, m + 1, j);
+        merge(nums, i, m, j);
     }
 
-    public int merge(int[] nums, int l, int m, int r) {
-        int p1 = l, p2 = m + 1;
-        int k = 0;
-        int[] t = new int[r - l + 1];
-        int res = 0;
-        while (p1 <= m && p2 <= r) {
+    public void merge(int[] nums, int i, int m, int j) {
+        int[] temps = new int[j - i + 1];
+        int p1 = i, p2 = m + 1, p = 0;
+        while (p1 <= m && p2 <= j) {
             if (nums[p1] <= nums[p2]) {
-                t[k++] = nums[p2++];
+                temps[p++] = nums[p1++];
             } else {
-                res += r - p2 + 1;
-                t[k++] = nums[p1++];
+                temps[p++] = nums[p2++];
+                count += m - p1 + 1;		// >>>>>> 就多个这
             }
         }
         if (p1 <= m) {
-            System.arraycopy(nums, p1, t, k, m - p1 + 1);
+            System.arraycopy(nums, p1, temps, p, m - p1 + 1);
         } else {
-            System.arraycopy(nums, p2, t, k, r - p2 + 1);
+            System.arraycopy(nums, p2, temps, p, j - p2 + 1);
         }
-        System.arraycopy(t, 0, nums, l, r - l + 1);
-        return res;
+        System.arraycopy(temps, 0, nums, i, j - i + 1);
     }
 }
 ```
