--- a/docs/题/leetcode/104. 二叉树的最大深度.md
+++ b/docs/题/leetcode/104. 二叉树的最大深度.md
@@ -1,8 +1,14 @@
-深度，即链的节点个数：
+> 本题求的是：从**根节点**到最远叶子节点的最长路径上的节点数
+
+递归函数返回的是当前节点到其最远叶子节点的路径的节点个数：
 
 - 空：0
-- 叶子：1
-- 一般：左/右+1
+
+- 一般：max(左/右)+1
+
+  叶子：1
+
+那么只需要传入root为起始，即为所求
 
 ```java
 // 104. 二叉树的最大深度
@@ -11,10 +17,9 @@ class Solution {
         if(root == null){
             return 0;
         }
-        int leftDepth = maxDepth(root.left);
-        int rightDepth = maxDepth(root.right);
-        // 最大的左右孩子的深度，再加上自身
-        return Math.max(leftDepth, rightDepth) + 1;
+        int left = maxDepth(root.left);
+        int right = maxDepth(root.right);
+        return Math.max(left, right) + 1;			// 最大的左右孩子的深度，再加上自身
     }
 }
 ```
