--- a/docs/题/leetcode/543. 二叉树的直径.md
+++ b/docs/题/leetcode/543. 二叉树的直径.md
@@ -1,10 +1,8 @@
-> 两节点之间**路径**的长度由它们之间**边数**表示。
-> 
 > 二叉树的 **直径** 是指树中任意两个节点之间最长路径的 长度 。这条路径可能经过也可能不经过根节点 root 。
 
 
 
-**直径 = 左节点个数 + 右节点个数**
+**直径 = 路径的边数 = 路径的节点数 - 1 = 左节点个数 + 右节点个数**
 
 ​	假设我们知道对于该节点的左儿子向下遍历经过最多的节点数 L （即以左儿子为根的子树的深度） 和其右儿子向下遍历经过最多的节点数 R （即以右儿子为根的子树的深度），那么以该节点为起点的路径经过节点数的最大值即为 L+R+1 。
 
@@ -19,7 +17,7 @@ class Solution {
     }
 
     // dfs 返回的是 节点个数：空节点是0，叶子节点是1，一般节点是max(左,右) + 自身1.
-    // res 更新是直径，直径 = 左节点个数 + 右节点个数。
+    // 全局变量 res 更新是直径，直径 = 左节点个数 + 右节点个数。
     public int dfs(TreeNode root){
         if(root == null){
             return 0;
@@ -28,8 +26,8 @@ class Solution {
         int left = dfs(root.left);
         int right = dfs(root.right);
 
-        res = Math.max(res, left + right);
-        return Math.max(left, right) + 1;
+        res = Math.max(res, left + right);		// 直径 = 左节点个数 + 右节点个数
+        return Math.max(left, right) + 1;		// 当前节点到其最远叶子节点的路径的节点个数
     }
 }
 ```
