--- a/docs/基础/排序/题.md
+++ b/docs/基础/排序/题.md
@@ -1,14 +1,18 @@
-利用合并数组的性质：
+## 归并排序：
 
-​	[493. 翻转对.md](..\..\题\leetcode\493. 翻转对.md) 
+统计个数
 
-​	[计算数组的小和.md](..\..\题\笔试\计算数组的小和.md) ：统计个数的顺序对
+​	[493. 翻转对.md](..\..\题\leetcode\493. 翻转对.md) ：分开。
 
-​	🚀[LCR 170. 交易逆序对的总数.md](..\..\题\leetcode\LCR 170. 交易逆序对的总数.md)：归并排序算**逆序对**。
+​	[计算数组的小和.md](..\..\题\笔试\计算数组的小和.md) ：一起。
 
+​	🚀[LCR 170. 交易逆序对的总数.md](..\..\题\leetcode\LCR 170. 交易逆序对的总数.md)：一起。当满足 `nums[i] > nums[j]`时，左子数组中的 i 右边的数一定大于`nums[j]`，就是逆序对的个数`count += m - p1 + 1;`
 
+改造：
 
+​	 [23. 合并 K 个升序链表.md](..\..\题\leetcode\23. 合并 K 个升序链表.md) ：
 
+## 堆
 
 [215. 数组中的第K个最大元素.md](..\..\题\leetcode\215. 数组中的第K个最大元素.md) : 
 
@@ -29,4 +33,3 @@ topK小的最优：维护大顶堆 nlogk
 
 
 [295. 数据流的中位数.md](..\..\题\leetcode\295. 数据流的中位数.md)  
-
