--- a/docs/基础/链表/链表.md
+++ b/docs/基础/链表/链表.md
@@ -215,6 +215,10 @@ class Solution {
 
 ## 其他
 
+[链表 - 力扣（LeetCode）全球极客挚爱的技术成长平台](https://leetcode.cn/problem-list/linked-list/)
+
+
+
  [彩虹链表.md](..\..\题\笔试\彩虹链表.md) ：中间节点 + 反转列表 + 融合列表（变为交替）
 
 
@@ -241,7 +245,9 @@ class Solution {
 
 环
 
-​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md)  [142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) 
+​	 [141. 环形链表.md](..\..\题\leetcode\141. 环形链表.md) ：slow和fast相遇
+
+​	[142. 环形链表 II.md](..\..\题\leetcode\142. 环形链表 II.md) ：slow和fast相遇，再slow和head相遇
 
 ​	 [获取倒n.md](..\..\题\leetcode\获取倒n.md) [19. 删除链表的倒数第 N 个结点.md](..\..\题\leetcode\19. 删除链表的倒数第 N 个结点.md) 
 
