--- a/docs/题/leetcode/124. 二叉树中的最大路径和.md
+++ b/docs/题/leetcode/124. 二叉树中的最大路径和.md
@@ -1,11 +1,16 @@
-
-
-
 **路径和** 是路径中各节点值的总和。
 
 ​	二叉树中的 **路径** 被定义为一条节点序列，序列中每对相邻节点之间都存在一条边。同一个节点在一条路径序列中 至多出现一次 。
 
 ​	该路径 至少包含一个 节点，且不一定经过根节点。
+
+
+
+最大链和：以当前节点为根，到子树中某个节点的路径，取其最大路径和。保证一定非负。
+
+
+
+注意：`int res = Integer.MIN_VALUE;`。对应只有一个根节点是-3，不然输出0.
 
 ```java
 class Solution {
