--- a/docs/题/leetcode/141. 环形链表.md
+++ b/docs/题/leetcode/141. 环形链表.md
@@ -1,5 +1,5 @@
 ## 快慢指针
-中间指针和尾部指针的追击，注意判断追击的条件写在下面。
+fast指针和slow指针的追击，注意判断追击的条件写在下面。
 ```java
 public class Solution {
     public boolean hasCycle(ListNode head) {
