--- a/docs/题/leetcode/23. 合并 K 个升序链表.md
+++ b/docs/题/leetcode/23. 合并 K 个升序链表.md
@@ -1,7 +1,11 @@
 
-## 🚀分治合并
+## 🚀归并排序改
 
-$O(kn \log k), O(\log k)$
+$O(n k \log k), O(\log k)$
+
+- `mergeSort()` 设置返回值，来供 合并两个链表的函数 `mergeTwoLists(l1, l2)` 传入链表头节点。
+- `mergeSort()` 分到单个元素时，就可以返回。当数组为空，那么`mergeSort()` 就不对，要特殊处理。
+
 ```java
 class Solution {
     public ListNode mergeKLists(ListNode[] lists) {
@@ -14,8 +18,7 @@ class Solution {
     }
 
     public ListNode mergeSort(ListNode[] lists, int i, int j) {
-        if (i == j) {
-            System.out.println(lists.length);
+        if (i >= j) {
             return lists[i];
         }
         int m = i + j >>> 1;
