--- a/docs/题/leetcode/2602. 使数组元素全部相等的最少操作次数.md
+++ b/docs/题/leetcode/2602. 使数组元素全部相等的最少操作次数.md
@@ -1,3 +1,7 @@
+前缀和 + 找到 谁是大于它（k1个* target - 前缀和）谁是小于它的（前缀和 - k2个 * target）
+
+![image-20241202171020935](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202412021710980.png)
+
 ![alt text](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images202406132245723.png)
 
 ```java
@@ -15,7 +19,7 @@ class Solution {
         for (int query : queries) {
             int index = binarySearch(nums, query);
             long left = (long) index * query - sums[index];
-            long right = sums[n] - sums[index] - (long) (n - index) * query;
+            long right = sums[n] - sums[index] - (long) (n - index) * query;		// nums[index...n-1], 有 n-index个。
             result.add(left + right);
         }
         return result;
