--- a/docs/题/leetcode/307. 区域和检索 - 数组可修改.md
+++ b/docs/题/leetcode/307. 区域和检索 - 数组可修改.md
@@ -31,44 +31,50 @@ class NumArray {
 
 ```java
 class NumArray {
-    private int[] nums;
-    private int[] tree;
+    int[] nums;
+    TreeArray treeArray;
 
     public NumArray(int[] nums) {
-        int n = nums.length;
-
-        // 初始化
-        tree = new int[n + 1];
-        this.nums = new int[n];     // nums 不直接赋值，而是各元素在 update 中和 tree 一起赋值
-        for (int i = 0; i < n; i++) {
-            update(i, nums[i]);
-        }
+        this.nums = nums;
+        treeArray = new TreeArray(nums);
     }
 
     public void update(int index, int val) {
-        int delta = val - nums[index];
+        int add = val - nums[index];
         nums[index] = val;
-        for (int i = index + 1; i < tree.length; i += i & -i) {
-            tree[i] += delta;
-        }
-    }
-
-    private int prefixSum(int i) {
-        int s = 0;
-        for (; i > 0; i -= i & -i) { // 另一种写法 i &= i-1
-            s += tree[i];
-        }
-        return s;
-
-        // 递归
-        // if(i == 0){
-        // return 0;
-        // }
-        // return prefixSum(i - (i & -i)) + tree[i];
+        treeArray.update(index + 1, add);
     }
 
     public int sumRange(int left, int right) {
-        return prefixSum(right + 1) - prefixSum(left);
+        return treeArray.count(right + 1) - treeArray.count(left);
+    }
+
+    static class TreeArray {
+        int[] tree;
+
+        public TreeArray(int[] nums) {
+            int n = nums.length;
+            this.tree = new int[n + 1];
+            for (int i = 1; i <= n; i++) {
+                update(i, nums[i - 1]);
+            }
+        }
+
+        public void update(int i, int add) {
+            while (i < tree.length) {
+                tree[i] += add;
+                i += i & -i;
+            }
+        }
+
+        public int count(int i) {
+            int res = 0;
+            while (i > 0) {
+                res += tree[i];
+                i -= i & -i;
+            }
+            return res;
+        }
     }
 }
 ```
@@ -77,70 +83,52 @@ class NumArray {
 
 ```java
 class NumArray {
-    private int[] segmentTree;
-    private int n;
+    int[] nums;
+    TreeArray treeArray;
 
     public NumArray(int[] nums) {
-        n = nums.length;
-        segmentTree = new int[nums.length * 4];
-        build(0, 0, n - 1, nums);
+        this.nums = nums;
+        treeArray = new TreeArray(nums);
     }
-
-    public void update(int index, int val) {
-        change(index, val, 0, 0, n - 1);
-    }
-
-    public int sumRange(int left, int right) {
-        return range(left, right, 0, 0, n - 1);
-        // return _queryInterval(left, right, 0, 0, n - 1);
-    }
-
-    private void build(int node, int s, int e, int[] nums) {
-        if (s == e) {
-            segmentTree[node] = nums[s];
-            return;
-        }
-        int m = s + (e - s) / 2;
-        build(node * 2 + 1, s, m, nums);
-        build(node * 2 + 2, m + 1, e, nums);
-        segmentTree[node] = segmentTree[node * 2 + 1] + segmentTree[node * 2 + 2];
-    }
-
-    private void change(int index, int val, int node, int s, int e) {
-        if (s == e) {
-            segmentTree[node] = val;
-            return;
-        }
-        int m = s + e >>> 1;
-        if (index <= m) {
-            change(index, val, node * 2 + 1, s, m);
-        } else {
-            change(index, val, node * 2 + 2, m + 1, e);
-        }
-        segmentTree[node] = segmentTree[node * 2 + 1] + segmentTree[node * 2 + 2];
-    }
-
 
     
-    private int range(int left, int right, int node, int s, int e) {
-        if (left == s && right == e) {
-            return segmentTree[node];
+    public void update(int index, int val) {
+        int add = val - nums[index];
+        nums[index] = val;
+        treeArray.update(index + 1, add);
+    }
+    
+    
+    public int sumRange(int left, int right) {
+        return treeArray.count(right + 1) - treeArray.count(left);
+    }
+
+    static class TreeArray{
+        int[] tree;
+
+        public TreeArray(int[] nums){
+            int n = nums.length;
+            this.tree = new int[n + 1];
+            for(int i = 1; i <= n; i++){
+                update(i, nums[i - 1]);
+            }
         }
-        int m = s + e >>> 1;
-        int res = 0;
-        // 左
-        if (right <= m) {
-            res = range(left, right, node * 2 + 1, s, m);
+
+        public void update(int i, int add){
+            while(i < tree.length){
+                tree[i] += add;
+                i += i & -i;
+            }
         }
-        // 右
-        else if (left > m) {
-            res = range(left, right, node * 2 + 2, m + 1, e);
+
+        public int count(int i){
+            int res = 0;
+            while(i > 0){
+                res += tree[i];
+                i -= i & -i;
+            }
+            return res;
         }
-        // 左和右
-        else {
-            res = range(left, m, node * 2 + 1, s, m) + range(m + 1, right, node * 2 + 2, m + 1, e);
-        }
-        return res;
     }
 }
 ```
