--- a/docs/题/leetcode/543. 二叉树的直径.md
+++ b/docs/题/leetcode/543. 二叉树的直径.md
@@ -16,7 +16,7 @@ class Solution {
         return res;
     }
 
-    // dfs 返回的是 节点个数：空节点是0，叶子节点是1，一般节点是max(左,右) + 自身1.
+    // dfs 返回的是 以其为根的节点个数（子树的深度）：空节点是0，叶子节点是1，一般节点是max(左,右) + 自身1.
     // 全局变量 res 更新是直径，直径 = 左节点个数 + 右节点个数。
     public int dfs(TreeNode root){
         if(root == null){
