--- a/docs/高级/线段树/03线段树.md
+++ b/docs/高级/线段树/03线段树.md
@@ -1,25 +1,14 @@
-## 前缀和
+## 一维
 
-```java
-// 303. 区域和检索 - 数组不可变
-class NumArray {
-    int[] sums;
+![区间 [0, 7] 对应的线段树](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409272111078.png)
 
-	public NumArray(int[] nums) {
-        sums = new int[nums.length + 1];
-        sums[0] = 0;
-        for (int i = 0; i < nums.length; i++) {
-            sums[i + 1] = sums[i] + nums[i];
-        }
-    }
+ [303. 区域和检索.md](..\..\题\leetcode\303. 区域和检索.md)  
 
-    public int sumRange(int left, int right) {
-        return sums[right + 1] - sums[left];
-    }
-}
-```
+[307. 区域和检索 - 数组可修改.md](..\..\题\leetcode\307. 区域和检索 - 数组可修改.md) 
 
-## 线段树
+
+
+
 
 ```java
 // 303. 区域和检索 - 数组不可变
@@ -113,51 +102,6 @@ class NumArray {
                 sum += _queryInterval(qLeft, qRight, right_idx, mid + 1, right);
             }
             return sum;
-        }
-    }
-}
-```
-
-## 树状数组
-
-```java
-class NumArray {
-
-    TreeArray treeArray;
-
-    public NumArray(int[] nums) {
-        treeArray = new TreeArray(nums);
-    }
-    
-    public int sumRange(int left, int right) {
-        return treeArray.count(right + 1) - treeArray.count(left);
-    }
-
-    static class TreeArray{
-        int[] tree;
-
-        public TreeArray(int[] nums){
-            int n = nums.length;
-            this.tree = new int[n + 1];
-            for(int i = 1; i <= n; i++){
-                update(i, nums[i - 1]);
-            }
-        }
-
-        public void update(int i, int add){
-            while(i < tree.length){
-                tree[i] += add;
-                i += i & -i;
-            }
-        }
-
-        public int count(int i){
-            int res = 0;
-            while(i > 0){
-                res += tree[i];
-                i -= i & -i;
-            }
-            return res;
         }
     }
 }
