--- a/docs/基础/二分查找/二分查找.md
+++ b/docs/基础/二分查找/二分查找.md
@@ -1,3 +1,7 @@
+[toc]
+
+
+
 ## 重要
 
 首先，要求数组有序。
@@ -19,11 +23,11 @@
     空间复杂度
     * 需要常数个指针 $i,j,m$ , 因此额外占用的空间是 $O(1)$ 
 
-3. leftmost和rightmost的标准版：找不到返回-1
+3. leftmost和rightmost的精准找到 -1：找不到返回-1
 
     - leftmost: 找到了往左移， j = m - 1
     - rightmost: 找到了往右移， i = m + 1
-4. leftmost和rightmost的替身版：找不到返回替身
+4. leftmost和rightmost的找到<=：找不到返回替身
 
     - leftmost：大于等于的最左 `target <= a[m]`, i
     - rightmost：小于等于的最右 `a[m] <= target`，i-1
@@ -167,38 +171,6 @@ leftmost理解：
 
 `<= x`  是 rightmost(x), 也是 leftmost(x+1) - 1 即 `(>= x+1) -1`
 
-### 递归版
-
-拆解 while 循环。
-
-```java
-/**
- * <h3>二分查找 递归版 </h3>
- * @return <p>找到则返回索引</p>
- * <p>找不到返回 -1</p>
- */
-public static int binarySearchRecursion(int[] a, int target){
-    return recursion(a, target, 0, a.length - 1);
-}
-
-public static int recursion(int[] a, int target, int i, int j){
-    if(i > j){
-        return -1;
-        // return i;
-    }
-
-    int m = (i + j) >>> 1;
-
-    if (target < a[m]){
-        return recursion(a, target, i, m - 1);
-    }else if(a[m] < target){
-        return recursion(a, target, m + 1, j);
-    }else{
-        return m;
-    }
-}
-```
-
 ### continue写法
 
 ```java
@@ -267,3 +239,5 @@ leftmost i rightmost j 版
 ​	 [162. 寻找峰值.md](..\题\leetcode\162. 寻找峰值.md) 
 
 ​	 [1901. 寻找峰值 II.md](..\题\leetcode\1901. 寻找峰值 II.md) 
+
+ [2602. 使数组元素全部相等的最少操作次数.md](..\..\题\leetcode\2602. 使数组元素全部相等的最少操作次数.md) 
