--- a/docs/高级/线段树/01前缀和.md
+++ b/docs/高级/线段树/01前缀和.md
@@ -1,8 +1,38 @@
 ## 一维前缀和
 
+```java
+class NumArray {
+    int[] sums;
+    int[] nums;
+    public NumArray(int[] nums) {
+        this.nums = nums;
+        sums = new int[nums.length + 1];
+        for(int i = 0; i <nums.length; i++){
+            sums[i+1] = sums[i] + nums[i];
+        }
+    }
+    
+    public void update(int index, int val) {
+        int add = val - nums[index];
+        nums[index] = val;
+        for(int i = index; i < nums.length; i++){
+            sums[i + 1] += add;			// nums对应的sums是+1
+        }
+    }
+    
+    public int sumRange(int left, int right) {
+        return sums[right + 1] - sums[left];
+    }
+}
+```
+
+
+
 ### 前缀和的含义
 
-sums[i]表示[0...i-1]的子数组的和（不包含自己），sums[0]=0 表示一个空数组的元素和。
+`sums[i]`直接就是表示`nums[0...i-1](第一个到第i个)`的子数组的和，
+
+sum实际从1开始，sums[0]=0 表示一个空数组的元素和。
 
 - $sums[0]=0$
 
@@ -14,11 +44,11 @@ sums[i]表示[0...i-1]的子数组的和（不包含自己），sums[0]=0 表示
 
 > 例如 nums=[1,2,1,2]，对应的前缀和数组为 sums=[0,1,3,4,6]。
 
-### 前缀和之差
+### nums[left...right]: 前缀和之差
 
 把子数组的元素和转换成两个前缀和的差，即
 
-`[left...right] = sums[right + 1] - sums[left]`
+`nums[left...right] = sums[right + 1] - sums[left]`
 
 $$\displaystyle \sum_{j=left}^{right}\textit{nums}[j] = sums[right+1] - sums[left] = \sum\limits_{j=0}^{right} \textit{nums}[j] - \sum\limits_{j=0}^{left-1}\textit{nums}[j] $$
 
@@ -27,33 +57,6 @@ $$\displaystyle \sum_{j=left}^{right}\textit{nums}[j] = sums[right+1] - sums[lef
 答：如果要计算的子数组是`[0...j]`，那么就是sums[j+1]-sums[0]。如果不定义 sums[0]=0，就必须特判 left=0 的情况了。
 
 ![image-20240927153932012](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202409271539077.png)
-
-```java
-class NumArray {
-    int[] sums;
-    int[] nums;
-    public NumArray(int[] nums) {
-        this.nums = nums;
-        sums = new int[nums.length + 1];
-        sums[0] = 0;
-        for(int i = 0; i <nums.length; i++){
-            sums[i+1] = sums[i] + nums[i];
-        }
-    }
-    
-    public void update(int index, int val) {
-        int delta = val - nums[index];
-        nums[index] = val;
-        for(int i = index; i < nums.length; i++){
-            sums[i + 1] += delta;			// nums对应的sums是+1
-        }
-    }
-    
-    public int sumRange(int left, int right) {
-        return sums[right + 1] - sums[left];
-    }
-}
-```
 
 
 
@@ -88,11 +91,11 @@ class NumMatrix {
 
     // 更新：田字形。右下角矩形的面积=整体面积-左边面积-上面面积+左上面积
     public void update(int r, int c, int val) {
-        int delta = val - nums[r][c];
+        int add = val - nums[r][c];
         nums[r][c] = val;
         for (int i = r; i < nums.length; i++) {
             for (int j = c; j < nums[0].length; j++) {
-                sums[i + 1][j + 1] += delta;
+                sums[i + 1][j + 1] += add+ ;
             }
         }
     }
