--- a/docs/基础/动态规划/背包问题.md
+++ b/docs/基础/动态规划/背包问题.md
@@ -60,15 +60,17 @@ double fractionalKnapsack(Item[] items, int[] wgt, int[] val, int cap) {
 
 不需要物品价值排序。
 
+对着每个物品，进行 `[0, 最大背包容量]` 的依次计算。
+
 `dp[ n 或 n + 1][cap + 1]`: 都是 **cap + 1**。因为`c-w[i]`会等于0，就需要cap=0的情况
 
 ![image-20240812231037699](https://cdn.jsdelivr.net/gh/sword4869/pic1@main/images/202408122310736.png)
 
 ### n x (cap+1)
 
-对着每个物品，进行**[0, 最大背包容量]**的依次计算。得到 n x (cap+1) 的数组。
+`dp[i][c]`表示`[0...i]`个物品一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
 
-`dp[i][c]`表示前`[0...i]`个物品一起考虑后对应的不同容量背包`[0...cap]`下的最大价值。
+- dp[0]表示第一个物品，dp[n-1]表示所有物品。
 
 
 
@@ -144,11 +146,9 @@ public int pack01(int[] w, int[] v, int n, int cap) {
 
 ### 🚀(n+1) x (cap+1) 推荐
 
-对着每个物品，进行 `[0, 最大背包容量]` 的依次计算。得到 (n+1) x (cap+1) 的数组。
-
-背包必须包含0和n，0表示没装东西，n表示最大容量
-
 `dp[i][c]`表示前i个物品（`w[0...i-1]`）一起考虑后对应的不同容量背包`[0...c]`下的最大价值。
+
+​	背包`dp[i]`含0和n，0表示没装东西，n表示最大容量
 
 
 
